--- a/nginx.conf
+++ b/nginx.conf
@@ -21,19 +21,17 @@ http {
         server_name 2ss8606866.zicp.vip;
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
-	root /home/pi/mysite
+	    root /home/pi/mysite;
 
-       # location / {
-       # include        /etc/nginx/uwsgi_params;
-       #uwsgi_pass     127.0.0.1:8001;
-       #}
-
-        
-	
         location /static {
             root  /home/pi/mysite/static/;
-            index  index.html ;
+            index  index.html;
         }
+        location / {
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass 127.0.0.1:8001;
+            }
+
 
     }
 
