--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,14 +1,14 @@
 [uwsgi]
-
- 
-#socket =  127.0.0.1:8001
-http=0.0.0.0:8000 
+#使用nginx连接是时，使用
+socket =  0.0.0.0:8001
+#直接作为web服务器使用
+#http=0.0.0.0:8000
 chdir = /home/pi/mysite
 
 wsgi-file=mysite/wsgi.py
- 
+
 master = True
-processes=2 
+processes=2
 threads=2
 enable-threads=True
 max-requests=2000
